[project]
name = "pat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=2.3.0",
    "django-browser-reload>=1.18.0",
    "django-email-blacklist>=1.0.1",
    "django>=5.1.6",
    "fontawesomefree>=6.6.0",
    "gunicorn>=23.0.0",
    "psycopg[binary,pool]>=3.2.5",
    "python-dotenv>=1.0.1",
    "pytz>=2025.1",
]
