[project]
name = "pat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=2.3.0",
    "django-browser-reload>=1.18.0",
    "django-debug-toolbar>=5.2.0",
    "django-email-blacklist>=1.0.1",
    "django-storages[boto3]>=1.14.6",
    "django-turnstile>=0.1.2",
    "django>=5.1.6",
    "fontawesomefree>=6.6.0",
    "gunicorn>=23.0.0",
    "mistralai>=1.5.1",
    "pillow>=12.0.0",
    "psycopg[binary,pool]>=3.2.5",
    "python-dotenv>=1.0.1",
    "pytz>=2025.1",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.2.0",
    "openpyxl>=3.1.5",
    "requests>=2.32.5",
]
